<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbgd"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InitActivity" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="top|center_horizontal"
        android:text="@string/hello_world"
        android:textColor="@color/textcolor"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/txtauthorinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="top|center_horizontal"
        android:text="@string/authorinfo"
        android:textColor="@color/textcolor" />

    <TextView
        android:id="@+id/exitinit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/txtauthorinfo"
        android:layout_marginTop="14dp"
        android:clickable="true"
        android:gravity="top|right"
        android:onClick="tap2exitinit"
        android:text="@string/exitinit"
        android:textColor="@color/textcolor"
        android:textSize="19sp" />

</RelativeLayout>