<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:arc="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res/com.lssjzmn.sergionavi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        android:layout_height="46dp"
        app:title="@string/hello_world" />

    <android.support.v4.widget.DrawerLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawerlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionbar" >

        <!-- The main content view -->
        <!-- main content must be the first element of DrawerLayout because it will be drawn first and drawer must be on top of it -->

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/actionbar"
            android:scaleType="fitCenter" >

            <com.baidu.mapapi.map.MapView
                android:id="@+id/mapView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:clickable="true" />

            <LinearLayout
                android:id="@+id/editlay"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="5.5"
                    android:alpha="0.9"
                    android:background="@drawable/searcheditor"
                    android:drawableLeft="@android:drawable/ic_menu_search"
                    android:hint="@string/search"
                    android:inputType="textAutoComplete"
                    android:shadowRadius="0.4" >
                </EditText>

                <Button
                    android:id="@+id/searchBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:alpha="0.9"
                    android:background="@drawable/searchbtnbgd"
                    android:focusable="true"
                    android:onClick="search"
                    android:text="@string/searchbtn" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/traficindicatorlay"
                android:layout_width="38dp"
                android:layout_height="84dp"
                android:layout_gravity="right"
                android:layout_marginRight="5dp"
                android:layout_marginTop="45dp"
                android:alpha="0.85"
                android:background="@drawable/indicatorbgd" >

                <ImageView
                    android:id="@+id/traficindicator"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="2dp"
                    android:clickable="true"
                    android:contentDescription="@string/hello_world"
                    android:onClick="traficClick"
                    android:src="@drawable/traficunabled" />

                <ImageView
                    android:id="@+id/sateliteindicator"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_below="@id/traficindicator"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:contentDescription="@string/hello_world"
                    android:onClick="sateliteClick"
                    android:src="@drawable/sateliteunabled" />
            </RelativeLayout>
        </FrameLayout>

        <!-- The navigation drawer at left side -->

        <LinearLayout
            android:id="@+id/mydrawer"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/mainbgd"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp" >

            <ListView
                android:id="@+id/listdrawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="18dp"
                android:background="#0033FF"
                android:choiceMode="singleChoice"
                android:divider="#999999"
                android:dividerHeight="1dp" >
            </ListView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingTop="16dp" >

                <CheckedTextView
                    android:id="@+id/checkloc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:background="#66CCFF"
                    android:checkMark="?android:attr/listChoiceIndicatorSingle"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/loccheck"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>

</RelativeLayout>